--- a/NZWalks/NZWalks.API/appsettings.json
+++ b/NZWalks/NZWalks.API/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "NZWalksCon": "Server=ADRENALINE\\TESTINSTANZ;Database=NZWalks6Db;Trusted_Connection=True;MultipleActiveResultSets=True;TrustServerCertificate=True;"
+  }
 }
