--- a/NZWalks/NZWalks.API/appsettings.json
+++ b/NZWalks/NZWalks.API/appsettings.json
@@ -7,10 +7,10 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "NZWalksCon": "Server=ADRENALINE\\TESTINSTANZ;Database=NZWalks6Db;Trusted_Connection=True;MultipleActiveResultSets=True;TrustServerCertificate=True;"
+    "NZWalksCon": "Server=ServerName\\INSTANZNAME;Database=DatenbankName;Trusted_Connection=True;MultipleActiveResultSets=True;TrustServerCertificate=True;"
   },
   "Jwt": {
-    "Key": "CdZ2orUBaMoQx$F*1OT$gOv*6QlQQP#*PSg9",
+    "Key": "GenerierenEigenerCode",
     "Issuer": "https://localhost:7104/",
     "Audience": "https://localhost:7104/"
   }
